--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ main = "scrape_finlex:main"
 python = "3.12"
 bs4 = "^0.0.1"
 requests = "^2.31.0"
+python-dotenv = "^1.0.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.11.0"
