--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,15 @@ readme = "README.md"
 packages = [{ include = "scrape_finlex" }]
 
 [tool.poetry.scripts]
-main = "scrape_finlex:main"
+cli = "scrape_finlex:cli_main"
+server = "scrape_finlex:server_main"
 
 [tool.poetry.dependencies]
 python = "3.12"
 bs4 = "^0.0.1"
 requests = "^2.31.0"
 python-dotenv = "^1.0.1"
+flask = "^3.0.3"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.11.0"
