--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ requests = "^2.31.0"
 python-dotenv = "^1.0.1"
 flask = "^3.0.3"
 waitress = "^3.0.0"
+flask-cors = "^4.0.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.11.0"
