--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,11 +13,11 @@ server = "scrape_finlex:server_main"
 [tool.poetry.dependencies]
 python = "3.12.*"
 bs4 = "^0.0.1"
-requests = "^2.31.0"
 python-dotenv = "^1.0.1"
 flask = "^3.0.3"
 waitress = "^3.0.0"
 flask-cors = "^4.0.0"
+selenium = "^4.19.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.11.0"
