--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ python-dotenv = "^1.0.1"
 flask = "^3.0.3"
 waitress = "^3.0.0"
 flask-cors = "^4.0.0"
-selenium = "^4.19.0"
+requests = "^2.31.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.11.0"
