--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ waitress = "^3.0.0"
 flask-cors = "^4.0.0"
 requests = "^2.31.0"
 selenium = "^4.19.0"
+webdriver-manager = "^4.0.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.11.0"
