--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ flask = "^3.0.3"
 waitress = "^3.0.0"
 flask-cors = "^4.0.0"
 requests = "^2.31.0"
+cloudscraper = "^1.2.71"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.11.0"
